@@ -4,6 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
-COM_PODCASTMANAGER_FEED_VIEW_DESCRIPTION="The RSS feed for the podcast stream"
+COM_PODCASTMANAGER_FEED_HTML_VIEW_DESCRIPTION="A single webpage with a listing of podcast episodes"
+COM_PODCASTMANAGER_FEED_RAW_VIEW_DESCRIPTION="The RSS feed for the podcast stream"
 COM_PODCASTMANAGER_FEED_VIEW_OPTION=""
 COM_PODCASTMANAGER_FEED_VIEW_TITLE="Feed"
