@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <metadata>
-	<view title="Podcast Feed">
+	<view title="Podcast Manager">
 		<message>COM_PODCASTMANAGER_FEED_VIEW_DESCRIPTION</message>
 		<options var="format">
-			<option value="raw" name="Feed" msg="COM_PODCASTMANAGER_FEED_VIEW_DESCRIPTION" />
+			<option value="html" name="Feed Listing" msg="COM_PODCASTMANAGER_FEED_HTML_VIEW_DESCRIPTION" />
+			<option value="raw" name="RSS Feed" msg="COM_PODCASTMANAGER_FEED_RAW_VIEW_DESCRIPTION" />
 		</options>
 	</view>
 </metadata>
